<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:id="@+id/username_row"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/username_text"
            android:text="Username"
            android:layout_weight="1" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/username_input"
            android:layout_weight="1" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/password_row"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/password_text"
            android:text="Password"
            android:layout_weight="0.25" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_input"
            android:layout_weight="0.75" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/reinput_password_row"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_weight="0.3">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:id="@+id/reinput_password_text"
            android:text="Re-Input the Password"
            android:layout_weight="0.25" />

        <EditText
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/reinput_password_input"
            android:layout_weight="0.75" />

    </LinearLayout>

    <Button
        android:text="REGISTER"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:id="@+id/register_button"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@+id/password_row"
        android:layout_weight="0.4"/>

</LinearLayout>
