...

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/search_layout_text"
            android:layout_weight="0.95"
            style="@style/Widget.AppCompat.EditText" />

        <Button
            android:text="SEARCH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_layout_button"
            android:layout_weight="0.05" />

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
...
